Create very basic layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
-Hello!
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha256-m/h/cUDAhf6/iBRixTbuc8+Rg2cIETQtPcH9D3p2Kg0=" crossorigin="anonymous" />
+    </head>
+
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">Navbar</a>
+
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#features">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#team">Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#pricing">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <section id="home">
+            <div class="container">
+                <h1>Home</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Nulla sit amet quam at eros consectetur venenatis a id dolor. Sed nec vulputate eros, ut molestie ex. Nulla facilisi. Sed quis lorem et ante congue lobortis. In lobortis et nisl in gravida. Phasellus mollis ut ligula congue mollis. Nunc tempor tortor eget odio luctus, a luctus dui efficitur. Donec et laoreet risus. Aenean nec nunc molestie, molestie purus nec, elementum lacus. In auctor consectetur rhoncus. Duis sit amet ultrices nibh. In ipsum sapien, auctor sed fermentum sit amet, elementum nec ex. Sed pharetra justo a fringilla hendrerit. Quisque erat ipsum, blandit quis sollicitudin eu, sodales vitae purus.</p>
+            </div>
+        </section>
+
+        <section id="about">
+            <div class="container">
+                <h1>About</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Nulla sit amet quam at eros consectetur venenatis a id dolor. Sed nec vulputate eros, ut molestie ex. Nulla facilisi. Sed quis lorem et ante congue lobortis. In lobortis et nisl in gravida. Phasellus mollis ut ligula congue mollis. Nunc tempor tortor eget odio luctus, a luctus dui efficitur. Donec et laoreet risus. Aenean nec nunc molestie, molestie purus nec, elementum lacus. In auctor consectetur rhoncus. Duis sit amet ultrices nibh. In ipsum sapien, auctor sed fermentum sit amet, elementum nec ex. Sed pharetra justo a fringilla hendrerit. Quisque erat ipsum, blandit quis sollicitudin eu, sodales vitae purus.</p>
+            </div>
+        </section>
+
+        <section id="features">
+            <div class="container">
+                <h1>Features</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Nulla sit amet quam at eros consectetur venenatis a id dolor. Sed nec vulputate eros, ut molestie ex. Nulla facilisi. Sed quis lorem et ante congue lobortis. In lobortis et nisl in gravida. Phasellus mollis ut ligula congue mollis. Nunc tempor tortor eget odio luctus, a luctus dui efficitur. Donec et laoreet risus. Aenean nec nunc molestie, molestie purus nec, elementum lacus. In auctor consectetur rhoncus. Duis sit amet ultrices nibh. In ipsum sapien, auctor sed fermentum sit amet, elementum nec ex. Sed pharetra justo a fringilla hendrerit. Quisque erat ipsum, blandit quis sollicitudin eu, sodales vitae purus.</p>
+            </div>
+        </section>
+
+        <section id="team">
+            <div class="container">
+                <h1>Team</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Nulla sit amet quam at eros consectetur venenatis a id dolor. Sed nec vulputate eros, ut molestie ex. Nulla facilisi. Sed quis lorem et ante congue lobortis. In lobortis et nisl in gravida. Phasellus mollis ut ligula congue mollis. Nunc tempor tortor eget odio luctus, a luctus dui efficitur. Donec et laoreet risus. Aenean nec nunc molestie, molestie purus nec, elementum lacus. In auctor consectetur rhoncus. Duis sit amet ultrices nibh. In ipsum sapien, auctor sed fermentum sit amet, elementum nec ex. Sed pharetra justo a fringilla hendrerit. Quisque erat ipsum, blandit quis sollicitudin eu, sodales vitae purus.</p>
+            </div>
+        </section>
+
+        <section id="pricing">
+            <div class="container">
+                <h1>Pricing</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Nulla sit amet quam at eros consectetur venenatis a id dolor. Sed nec vulputate eros, ut molestie ex. Nulla facilisi. Sed quis lorem et ante congue lobortis. In lobortis et nisl in gravida. Phasellus mollis ut ligula congue mollis. Nunc tempor tortor eget odio luctus, a luctus dui efficitur. Donec et laoreet risus. Aenean nec nunc molestie, molestie purus nec, elementum lacus. In auctor consectetur rhoncus. Duis sit amet ultrices nibh. In ipsum sapien, auctor sed fermentum sit amet, elementum nec ex. Sed pharetra justo a fringilla hendrerit. Quisque erat ipsum, blandit quis sollicitudin eu, sodales vitae purus.</p>
+            </div>
+        </section>
+
+        <section id="contact">
+            <div class="container">
+                <h1>Contact</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Nulla sit amet quam at eros consectetur venenatis a id dolor. Sed nec vulputate eros, ut molestie ex. Nulla facilisi. Sed quis lorem et ante congue lobortis. In lobortis et nisl in gravida. Phasellus mollis ut ligula congue mollis. Nunc tempor tortor eget odio luctus, a luctus dui efficitur. Donec et laoreet risus. Aenean nec nunc molestie, molestie purus nec, elementum lacus. In auctor consectetur rhoncus. Duis sit amet ultrices nibh. In ipsum sapien, auctor sed fermentum sit amet, elementum nec ex. Sed pharetra justo a fringilla hendrerit. Quisque erat ipsum, blandit quis sollicitudin eu, sodales vitae purus.</p>
+            </div>
+        </section>
+    </body>
+</html>
