--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
         <section id="features">
             <div class="container">
                 <h1>Features</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p>Nulla sit amet quam at eros consectetur venenatis a id dolor. Sed nec vulputate eros, ut molestie ex. Nulla facilisi. Sed quis lorem et ante congue lobortis. In lobortis et nisl in gravida. Phasellus mollis ut ligula congue mollis. Nunc tempor tortor eget odio luctus, a luctus dui efficitur. Donec et laoreet risus. Aenean nec nunc molestie, molestie purus nec, elementum lacus. In auctor consectetur rhoncus. Duis sit amet ultrices nibh. In ipsum sapien, auctor sed fermentum sit amet, elementum nec ex. Sed pharetra justo a fringilla hendrerit. Quisque erat ipsum, blandit quis sollicitudin eu, sodales vitae purus.</p>
+                <p>PicMe is a service that allows people to get in contact with a photograph near their area for a quick photoshoot. Customers have the option of selecting a professional photograph with an already established studio or an amateur who’s just starting out.</p>
+                <p>With the phone app, the user can locate and choose a photograph signed up with the service and have them get to their location in a few minutes.</p>
+                <p>After the shoot, the photographer sends the pictures to the customers through the PicMe app.<p>
             </div>
         </section>
 
