Add pricing tiers

--- a/index.html
+++ b/index.html
@@ -75,17 +75,31 @@
         <section id="pricing">
             <div class="container">
                 <h1>Pricing</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p>Nulla sit amet quam at eros consectetur venenatis a id dolor. Sed nec vulputate eros, ut molestie ex. Nulla facilisi. Sed quis lorem et ante congue lobortis. In lobortis et nisl in gravida. Phasellus mollis ut ligula congue mollis. Nunc tempor tortor eget odio luctus, a luctus dui efficitur. Donec et laoreet risus. Aenean nec nunc molestie, molestie purus nec, elementum lacus. In auctor consectetur rhoncus. Duis sit amet ultrices nibh. In ipsum sapien, auctor sed fermentum sit amet, elementum nec ex. Sed pharetra justo a fringilla hendrerit. Quisque erat ipsum, blandit quis sollicitudin eu, sodales vitae purus.</p>
+                <div class="pricing-container">
+                    <div class="pricing-tier">
+                        <span class="name"></span>
+                        <span class="cost">20</span>
+                        <ul class="features">
+                            <li>Feature 1</li>
+                            <li>Feature 2</li>
+                            <li>Feature 3</li>
+                        </ul>
+                    </div>
+                    <div class="pricing-tier">
+                        <span class="name"></span>
+                        <span class="cost">35</span>
+                        <ul class="features">
+                            <li>Feature 1</li>
+                            <li>Feature 2</li>
+                            <li>Feature 3</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
 
         <section id="contact">
-            <div class="container">
-                <h1>Contact</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p>Nulla sit amet quam at eros consectetur venenatis a id dolor. Sed nec vulputate eros, ut molestie ex. Nulla facilisi. Sed quis lorem et ante congue lobortis. In lobortis et nisl in gravida. Phasellus mollis ut ligula congue mollis. Nunc tempor tortor eget odio luctus, a luctus dui efficitur. Donec et laoreet risus. Aenean nec nunc molestie, molestie purus nec, elementum lacus. In auctor consectetur rhoncus. Duis sit amet ultrices nibh. In ipsum sapien, auctor sed fermentum sit amet, elementum nec ex. Sed pharetra justo a fringilla hendrerit. Quisque erat ipsum, blandit quis sollicitudin eu, sodales vitae purus.</p>
-            </div>
+
         </section>
     </body>
 </html>
