--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <h1>Pricing</h1>
                 <div class="pricing-container">
                     <div class="pricing-tier">
-                        <span class="name"></span>
-                        <span class="cost">20</span>
+                        <span class="name">Amateur</span>
+                        <span class="cost">23</span>
                         <ul class="features">
                             <li>Feature 1</li>
                             <li>Feature 2</li>
@@ -86,7 +86,7 @@
                         </ul>
                     </div>
                     <div class="pricing-tier">
-                        <span class="name"></span>
+                        <span class="name">Professional</span>
                         <span class="cost">35</span>
                         <ul class="features">
                             <li>Feature 1</li>
