Contact form & footer

--- a/index.html
+++ b/index.html
@@ -101,8 +101,37 @@
         <section id="contact">
             <div class="container">
                 <h1>Contact</h1>
-                <p>Links<p>
+                <form>
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="form-group">
+                                <input id="name" class="form-control" type="text" placeholder="Name"/>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="form-group">
+                                <input id="email" class="form-control" type="text" placeholder="Email Address"/>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-12 col-lg-4">
+                            <div class="form-group">
+                                <input id="subject" class="form-control" type="text" placeholder="Subject"/>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-group">
+                                <textarea id="message" class="form-control" placeholder="Message"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </section>
+
+        <footer class="footer">
+            <div class="container">
+                <span class="text-muted">Copyright &copy; 2017 by Picme. All Rights Reserved.</span>
+            </div>
+        </footer>
     </body>
 </html>
