Add call-to-action buttons to home

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
         <section id="home">
             <div class="container">
-                <h1>Home</h1> 
-                <p>Sign up to PicMe</p>
+                <a class="btn btn-primary" href="#">Get the app</a>
+                <a class="btn btn-success" href="#">Sign up</a>
             </div>
         </section>
 
