--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
                             <a class="nav-link" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">About</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="#features">Features</a>
                         </li>
                         <li class="nav-item">
@@ -41,8 +38,17 @@
 
         <section id="home">
             <div class="container">
-                <a class="btn btn-primary" href="#">Get the app</a>
-                <a class="btn btn-success" href="#">Sign up</a>
+                <div class="video-background">
+                    <video class="background" playsinline autoplay muted loop poster="tbd.jpg">
+                        <source src="tbd.webm" type="video/webm">
+                        <source src="tbd.mp4" type="video/mp4">
+                    </video>
+
+                    <div class="overlay">
+                        <a class="btn btn-primary" href="#">Get the app</a>
+                        <a class="btn btn-success" href="#">Sign up</a>
+                    </div>
+                </div>
             </div>
         </section>
         
