--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h1>Team</h1>
                 <p>We are a small team of software engineering students at Uottawa.</p>
                 <div class="team-container">
-                        <span class="name">Amateur</span>
+                        <span class="name"></span>
                         <ul class="team">
                             <li>Hady El-Saleh</li>
                             <li>Nicolas Gnyra</li>
@@ -85,7 +85,7 @@
                 <div class="pricing-container">
                     <div class="pricing-tier">
                         <span class="name">Amateur</span>
-                        <span class="cost">23</span>
+                        <span class="cost">23$</span>
                         <ul class="features">
                             <li>Feature 1</li>
                             <li>Feature 2</li>
@@ -94,7 +94,7 @@
                     </div>
                     <div class="pricing-tier">
                         <span class="name">Professional</span>
-                        <span class="cost">35</span>
+                        <span class="cost">35$</span>
                         <ul class="features">
                             <li>Feature 1</li>
                             <li>Feature 2</li>
