Change "amateur" to "enthusiast" to reduce negative connotation

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
                 <h1>Team</h1>
                 <p>We are a small team of software engineering students at Uottawa.</p>
                 <div class="team-container">
-                        <span class="name">Amateur</span>
-                        <ul class="team">
-                            <li>Hady El-Saleh</li>
-                            <li>Nicolas Gnyra</li>
-                            <li>Randy Labrecque</li>
-                            <li>Max Melkonian</li>
-                            <li>Maulik Shah</li>
-                        </ul>
-                    </div>
+                    <span class="name">Amateur</span>
+                    <ul class="team">
+                        <li>Hady El-Saleh</li>
+                        <li>Nicolas Gnyra</li>
+                        <li>Randy Labrecque</li>
+                        <li>Max Melkonian</li>
+                        <li>Maulik Shah</li>
+                    </ul>
+                </div>
             </div>
         </section>
 
@@ -84,7 +84,7 @@
                 <p>*Both pricing options include photo editing*</p>
                 <div class="pricing-container">
                     <div class="pricing-tier">
-                        <span class="name">Amateur</span>
+                        <span class="name">Enthusiast</span>
                         <span class="cost">23</span>
                         <ul class="features">
                             <li>Feature 1</li>
