Sumary heading title + Description

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">Navbar</a>
+                <h1 class="primary-heading">Live the beautiful moment</h1>
+                <p class="secondary-heading">The better way for modern photographers to take pic, edited and delivered online.</p>
 
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav mr-auto">
@@ -108,7 +110,7 @@
         <section id="contact">
             <div class="container">
                 <h1>Contact</h1>
-                <form>ejfkjn
+                <form>
                     <div class="row">
                         <div class="col-12 col-md-6 col-lg-4">
                             <div class="form-group">
