--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">Navbar</a>
-                <h1 class="primary-heading">Live the beautiful moment</h1>
-                <p class="secondary-heading">The better way for modern photographers to take pic, edited and delivered online.</p>
 
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav mr-auto">
@@ -45,7 +43,10 @@
                         <source src="tbd.webm" type="video/webm">
                         <source src="tbd.mp4" type="video/mp4">
                     </video>
-
+                    <div class="col-md-12 text-center">
+                            <h1 class="primary-heading">Pick the best photgrapher for the best moment</h1>
+                            <p class="secondary-heading">The better way for modern photographers to take pic for you, edited and delivered for you.</p>
+                    </div class="col-md-12 text-center"></div>
                     <div class="overlay">
                         <a class="btn btn-primary" href="#">Get the app</a>
                         <a class="btn btn-success" href="#">Sign up</a>
