just changed some of the words

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         <source src="tbd.mp4" type="video/mp4">
                     </video>
                     <div class="col-md-12 text-center">
-                            <h1 class="primary-heading">Pick the best photgrapher for the best moment</h1>
-                            <p class="secondary-heading">The better way for modern photographers to take pic for you, edited and delivered for you.</p>
+                            <h1 class="primary-heading">Pic the best photgrapher for the best moment</h1>
+                            <p class="secondary-heading"> Wherever you are, Picme is right there  </p>
                     </div class="col-md-12 text-center"></div>
                     <div class="overlay">
                         <a class="btn btn-primary" href="#">Get the app</a>
