--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
                         <source src="tbd.webm" type="video/webm">
                         <source src="tbd.mp4" type="video/mp4">
                     </video>
-                    <div class="col-md-12 text-center">
-                            <h1 class="primary-heading">Pic the best photgrapher for the best moment</h1>
-                            <p class="secondary-heading"> Wherever you are, Picme is right there  </p>
-                    </div class="col-md-12 text-center"></div>
-                    <div class="overlay">
-                        <a class="btn btn-primary" href="#">Get the app</a>
-                        <a class="btn btn-success" href="#">Sign up</a>
+                    <div class="overlay text-center">
+                        <h1 class="primary-heading">Pic the best photgrapher for the best moment</h1>
+                        <p class="secondary-heading">Wherever you are, Picme is right there</p>
+
+                        <p>
+                            <a class="btn btn-primary" href="#">Get the app</a>
+                            <a class="btn btn-success" href="#">Sign up</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -60,8 +61,8 @@
               <div class= "jumbotron">
                             
                 <h1>Features</h1>
-                <p>PicMe is a service that allows people to get in contact with a photograph near their area for a quick photoshoot. Customers have the option of selecting a professional photograph with an already established studio or an amateur who’s just starting out.</p>
-                <p>With the phone app, the user can locate and choose a photograph signed up with the service and have them get to their location in a few minutes.</p>
+                <p>PicMe is a service that allows people to get in contact with a photographer near their area for a quick photoshoot. Customers have the option of selecting a professional photographer with an already established studio or an enthusiast who’s just starting out.</p>
+                <p>With the mobile app, the user can locate and choose a photograph signed up with the service and have them get to their location in a few minutes.</p>
                 <p>After the shoot, the photographer sends the pictures to the customers through the PicMe app.<p>
                 </div> 
             </div>
