Replace primary/secondary with h1/lead

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     </video>
 
                     <div class="overlay text-center">
-                        <h1 class="primary-heading">Pic the best photgrapher for the best moment</h1>
-                        <p class="secondary-heading">Wherever you are, Picme is right there</p>
+                        <h1>Pic the best photgrapher for the best moment</h1>
+                        <p class="lead">Wherever you are, Picme is right there</p>
 
                         <p>
                             <a class="btn btn-primary" href="#">Get the app</a>
