--- a/index.html
+++ b/index.html
@@ -67,8 +67,21 @@
         <section id="team">
             <div class="container">
                 <h1>Team</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p>Nulla sit amet quam at eros consectetur venenatis a id dolor. Sed nec vulputate eros, ut molestie ex. Nulla facilisi. Sed quis lorem et ante congue lobortis. In lobortis et nisl in gravida. Phasellus mollis ut ligula congue mollis. Nunc tempor tortor eget odio luctus, a luctus dui efficitur. Donec et laoreet risus. Aenean nec nunc molestie, molestie purus nec, elementum lacus. In auctor consectetur rhoncus. Duis sit amet ultrices nibh. In ipsum sapien, auctor sed fermentum sit amet, elementum nec ex. Sed pharetra justo a fringilla hendrerit. Quisque erat ipsum, blandit quis sollicitudin eu, sodales vitae purus.</p>
+                <h2>Maxim Melkonian</h2>
+                <p> <img src="max.jpg" width="200" height="200"></p>
+                <p>Description of Maxim and his abilities</p>
+                <h2>Randy Labrecque</h2>
+                <p> <img src="randy.jpg" width="200" height="200"></p>
+                <p>Description of Randy and his abilities</p>
+                <h2>Maulik Shah</h2>
+                <p> <img src="maulik.jpg" width="200" height="200"></p>
+                <p>Description of Maulik and his abilities</p>
+                <h2>Nicolas Gnyra</h2>
+                <p> <img src="nicolas.jpg" width="200" height="200"></p>
+                <p>Description of Nicolas and his abilities</p>
+                <h2>Hady El-Saleh</h2>
+                <p> <img src="hadi.jpg" width="200" height="200"></p>
+                <p>Description of Hadi and his abilities</p>
             </div>
         </section>
 
