--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 <p> <img src="nicolas.jpg" width="200" height="200"></p>
                 <p>Description of Nicolas and his abilities</p>
                 <h2>Hady El-Saleh</h2>
-                <p> <img src="hadi.jpg" width="200" height="200"></p>
-                <p>Description of Hadi and his abilities</p>
+                <p> <img src="hady.jpg" width="200" height="200"></p>
+                <p>Description of Hady and his abilities</p>
             </div>
         </section>
 
