--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </video>
 
                     <div class="overlay text-center">
-                        <h1>Pic the best photgrapher for the best moment</h1>
+                        <h1>Pic the best photographer for the best moment</h1>
                         <p class="lead">Wherever you are, Picme is right there</p>
 
                         <p>
@@ -82,7 +82,7 @@
                 <p> <img src="nicolas.jpg" width="200" height="200"></p>
                 <p>Description of Nicolas and his abilities</p>
                 <h2>Hady El-Saleh</h2>
-                <p> <img src="hady.jpg" width="200" height="200"></p>
+                <p> <img src="Hady.jpg" width="200" height="200"></p>
                 <p>Description of Hady and his abilities</p>
             </div>
         </section>
