Move features into columns

--- a/index.html
+++ b/index.html
@@ -60,19 +60,21 @@
         <section id="features">
             <div class="container">
                 <h1>Features</h1>
-                <div class="feature">
-                    <div class="icon">(camera icon)</div>
-                    <p>PicMe is a service that allows people to get in contact with a photographer near their area for a quick photoshoot. Customers have the option of selecting a professional photographer with an already established studio or an enthusiast who’s just starting out.</p>
-                </div>
+                <div class="row">
+                    <div class="feature col-md-4">
+                        <div class="icon">(camera icon)</div>
+                        <p>PicMe is a service that allows people to get in contact with a photographer near their area for a quick photoshoot. Customers have the option of selecting a professional photographer with an already established studio or an enthusiast who’s just starting out.</p>
+                    </div>
 
-                <div class="feature">
-                    <div class="icon">(phone icon)</div>
-                    <p>With the mobile app, the user can locate and choose a photograph signed up with the service and have them get to their location in a few minutes.</p>
-                </div>
+                    <div class="feature col-md-4">
+                        <div class="icon">(phone icon)</div>
+                        <p>With the mobile app, the user can locate and choose a photograph signed up with the service and have them get to their location in a few minutes.</p>
+                    </div>
 
-                <div class="feature">
-                    <div class="icon">(mail icon)</div>
-                    <p>After the shoot, the photographer sends the pictures to the customers through the PicMe app.<p>
+                    <div class="feature col-md-4">
+                        <div class="icon">(mail icon)</div>
+                        <p>After the shoot, the photographer sends the pictures to the customers through the PicMe app.<p>
+                    </div>
                 </div>
             </div>
         </section>
