Make buttons bigger

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         <p class="lead">Wherever you are, Picme is right there</p>
 
                         <p>
-                            <a class="btn btn-primary" href="#">Get the app</a>
-                            <a class="btn btn-success" href="#">Sign up</a>
+                            <a class="btn btn-primary btn-lg" href="#">Get the app</a>
+                            <a class="btn btn-success btn-lg" href="#">Sign up</a>
                         </p>
                     </div>
                 </div>
