Wrap team members in team-member classed divs

--- a/index.html
+++ b/index.html
@@ -82,21 +82,36 @@
         <section id="team">
             <div class="container">
                 <h1>Team</h1>
-                <h2>Maxim Melkonian</h2>
-                <p> <img src="max.jpg" width="200" height="200"></p>
-                <p>Description of Maxim and his abilities</p>
-                <h2>Randy Labrecque</h2>
-                <p> <img src="randy.jpg" width="200" height="200"></p>
-                <p>Description of Randy and his abilities</p>
-                <h2>Maulik Shah</h2>
-                <p> <img src="maulik.jpg" width="200" height="200"></p>
-                <p>Description of Maulik and his abilities</p>
-                <h2>Nicolas Gnyra</h2>
-                <p> <img src="nicolas.jpg" width="200" height="200"></p>
-                <p>Description of Nicolas and his abilities</p>
-                <h2>Hady El-Saleh</h2>
-                <p> <img src="Hady.jpg" width="200" height="200"></p>
-                <p>Description of Hady and his abilities</p>
+
+                <div class="team-member">
+                    <h2>Maxim Melkonian</h2>
+                    <img src="max.jpg" width="200" height="200">
+                    <p>Description of Maxim and his abilities</p>
+                </div>
+
+                <div class="team-member">
+                    <h2>Randy Labrecque</h2>
+                    <img src="randy.jpg" width="200" height="200">
+                    <p>Description of Randy and his abilities</p>
+                </div>
+
+                <div class="team-member">
+                    <h2>Maulik Shah</h2>
+                    <img src="maulik.jpg" width="200" height="200">
+                    <p>Description of Maulik and his abilities</p>
+                </div>
+
+                <div class="team-member">
+                    <h2>Nicolas Gnyra</h2>
+                    <img src="nicolas.jpg" width="200" height="200">
+                    <p>Description of Nicolas and his abilities</p>
+                </div>
+
+                <div class="team-member">
+                    <h2>Hady El-Saleh</h2>
+                    <img src="Hady.jpg" width="200" height="200">
+                    <p>Description of Hady and his abilities</p>
+                </div>
             </div>
         </section>
 
