Make team members columns and center

--- a/index.html
+++ b/index.html
@@ -83,34 +83,36 @@
             <div class="container">
                 <h1>Team</h1>
 
-                <div class="team-member">
-                    <h2>Maxim Melkonian</h2>
-                    <img src="max.jpg" width="200" height="200">
-                    <p>Description of Maxim and his abilities</p>
-                </div>
+                <div class="row justify-content-center">
+                    <div class="team-member col-md-4">
+                        <h2>Maxim Melkonian</h2>
+                        <img src="max.jpg" width="200" height="200">
+                        <p>Description of Maxim and his abilities</p>
+                    </div>
 
-                <div class="team-member">
-                    <h2>Randy Labrecque</h2>
-                    <img src="randy.jpg" width="200" height="200">
-                    <p>Description of Randy and his abilities</p>
-                </div>
+                    <div class="team-member col-md-4">
+                        <h2>Randy Labrecque</h2>
+                        <img src="randy.jpg" width="200" height="200">
+                        <p>Description of Randy and his abilities</p>
+                    </div>
 
-                <div class="team-member">
-                    <h2>Maulik Shah</h2>
-                    <img src="maulik.jpg" width="200" height="200">
-                    <p>Description of Maulik and his abilities</p>
-                </div>
+                    <div class="team-member col-md-4">
+                        <h2>Maulik Shah</h2>
+                        <img src="maulik.jpg" width="200" height="200">
+                        <p>Description of Maulik and his abilities</p>
+                    </div>
 
-                <div class="team-member">
-                    <h2>Nicolas Gnyra</h2>
-                    <img src="nicolas.jpg" width="200" height="200">
-                    <p>Description of Nicolas and his abilities</p>
-                </div>
+                    <div class="team-member col-md-4">
+                        <h2>Nicolas Gnyra</h2>
+                        <img src="nicolas.jpg" width="200" height="200">
+                        <p>Description of Nicolas and his abilities</p>
+                    </div>
 
-                <div class="team-member">
-                    <h2>Hady El-Saleh</h2>
-                    <img src="Hady.jpg" width="200" height="200">
-                    <p>Description of Hady and his abilities</p>
+                    <div class="team-member col-md-4">
+                        <h2>Hady El-Saleh</h2>
+                        <img src="Hady.jpg" width="200" height="200">
+                        <p>Description of Hady and his abilities</p>
+                    </div>
                 </div>
             </div>
         </section>
