--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
         <!-- the website uses Twitter Bootstrap. Check out their documentation to learn about the
              available components and elements here https://getbootstrap.com/docs/4.0/getting-started/introduction/ -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha256-m/h/cUDAhf6/iBRixTbuc8+Rg2cIETQtPcH9D3p2Kg0=" crossorigin="anonymous" />
+        <link rel="stylesheet" href="style.css"/>
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">Navbar</a>
 
