--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
                 <h1>Features</h1>
                 <div class="row">
                     <div class="feature col-md-4">
-                        <div class="icon">(camera icon)</div>
+                        <div class="icon"><img src="img/camera-retro.svg"/></div>
                         <p>PicMe is a service that allows people to get in contact with a photographer near their area for a quick photoshoot. Customers have the option of selecting a professional photographer with an already established studio or an enthusiast who’s just starting out.</p>
                     </div>
 
                     <div class="feature col-md-4">
-                        <div class="icon">(phone icon)</div>
+                        <div class="icon"><img src="img/mobile-alt.svg"/></div>
                         <p>With the mobile app, the user can locate and choose a photograph signed up with the service and have them get to their location in a few minutes.</p>
                     </div>
 
                     <div class="feature col-md-4">
-                        <div class="icon">(mail icon)</div>
+                        <div class="icon"><img src="img/paper-plane.svg"/></div>
                         <p>After the shoot, the photographer sends the pictures to the customers through the PicMe app.<p>
                     </div>
                 </div>
