--- a/index.html
+++ b/index.html
@@ -38,22 +38,20 @@
         </nav>
 
         <section id="home">
-            <div class="container">
-                <div class="video-background">
-                    <video class="background" playsinline autoplay muted loop poster="tbd.jpg">
-                        <source src="tbd.webm" type="video/webm">
-                        <source src="tbd.mp4" type="video/mp4">
+            <div class="video-background">
+                <div class="background">
+                    <video playsinline autoplay muted loop poster="img/tbd.jpg">
+                        <source src="video/temp.mp4" type="video/mp4">
                     </video>
+                </div>
+                <div class="container overlay">
+                    <h1>Pic the best photographer for the best moment</h1>
+                    <p class="lead">Wherever you are, Picme is right there</p>
 
-                    <div class="overlay text-center">
-                        <h1>Pic the best photographer for the best moment</h1>
-                        <p class="lead">Wherever you are, Picme is right there</p>
-
-                        <p>
-                            <a class="btn btn-primary btn-lg" href="#">Get the app</a>
-                            <a class="btn btn-success btn-lg" href="#">Sign up</a>
-                        </p>
-                    </div>
+                    <p>
+                        <a class="btn btn-primary btn-lg" href="#">Get the app</a>
+                        <a class="btn btn-success btn-lg" href="#">Sign up</a>
+                    </p>
                 </div>
             </div>
         </section>
