--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">Navbar</a>
 
@@ -78,6 +78,33 @@
             </div>
         </section>
 
+        <section id="pricing">
+            <div class="container">
+                <h1>Pricing</h1>
+                <p>Pricing options include photo editing</p>
+                <div class="pricing-container">
+                    <div class="pricing-tier">
+                        <span class="name">Enthusiast</span>
+                        <span class="cost">23$</span>
+                        <ul class="features">
+                            <li>Feature 1</li>
+                            <li>Feature 2</li>
+                            <li>Feature 3</li>
+                        </ul>
+                    </div>
+                    <div class="pricing-tier">
+                        <span class="name">Professional</span>
+                        <span class="cost">35$</span>
+                        <ul class="features">
+                            <li>Feature 1</li>
+                            <li>Feature 2</li>
+                            <li>Feature 3</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="team">
             <div class="container">
                 <h1>Team</h1>
@@ -111,33 +138,6 @@
                         <h2>Hady El-Saleh</h2>
                         <img src="Hady.jpg" width="200" height="200">
                         <p>Description of Hady and his abilities</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="pricing">
-            <div class="container">
-                <h1>Pricing</h1>
-                <p>Pricing options include photo editing</p>
-                <div class="pricing-container">
-                    <div class="pricing-tier">
-                        <span class="name">Enthusiast</span>
-                        <span class="cost">23$</span>
-                        <ul class="features">
-                            <li>Feature 1</li>
-                            <li>Feature 2</li>
-                            <li>Feature 3</li>
-                        </ul>
-                    </div>
-                    <div class="pricing-tier">
-                        <span class="name">Professional</span>
-                        <span class="cost">35$</span>
-                        <ul class="features">
-                            <li>Feature 1</li>
-                            <li>Feature 2</li>
-                            <li>Feature 3</li>
-                        </ul>
                     </div>
                 </div>
             </div>
