--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">
+                    <img src="img/logo.svg" width="120" height="30"/>
+                </a>
 
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav mr-auto">
