--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     </head>
 
     <body data-spy="scroll" data-target="#navbar">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <nav id="site-navigation" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top nav-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="img/logo.svg" width="120" height="30"/>
+                    <img src="img/logo.svg"/>
                 </a>
 
                 <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="#home">Home</a>
                         </li>
