--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body data-spy="scroll" data-target="#navbar">
-        <nav id="site-navigation" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top nav-top">
+        <nav id="site-navigation" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navbar-animated nav-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="img/logo.svg"/>
@@ -61,20 +61,21 @@
         <section id="features">
             <div class="container">
                 <h1>Features</h1>
+                <p>Picme is a service that allows people to get in contact with a photographer near their area for a quick photoshoot.</p>
                 <div class="row">
                     <div class="feature col-md-4">
                         <div class="icon"><img src="img/camera-retro.svg"/></div>
-                        <p>PicMe is a service that allows people to get in contact with a photographer near their area for a quick photoshoot. Customers have the option of selecting a professional photographer with an already established studio or an enthusiast who’s just starting out.</p>
+                        <p>You have the option of selecting a professional photographer with an already established studio or an enthusiast who’s just starting out.</p>
                     </div>
 
                     <div class="feature col-md-4">
                         <div class="icon"><img src="img/mobile-alt.svg"/></div>
-                        <p>With the mobile app, the user can locate and choose a photograph signed up with the service and have them get to their location in a few minutes.</p>
+                        <p>Using the mobile app, you locate and choose a photograph signed up with the service and have them get to their location in a few minutes.</p>
                     </div>
 
                     <div class="feature col-md-4">
                         <div class="icon"><img src="img/paper-plane.svg"/></div>
-                        <p>After the shoot, the photographer sends the pictures to the customers through the PicMe app.<p>
+                        <p>After the shoot, the photographer sends you the pictures through the Picme app.<p>
                     </div>
                 </div>
             </div>
